--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <junit.version>5.0.1</junit.version>
         <junit.maven.version>1.0.1</junit.maven.version>
         <assert.version>3.8.0</assert.version>
+        <mockito.version>1.9.5</mockito.version>
     </properties>
 
 
@@ -59,6 +60,14 @@
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
             <version>${assert.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.mockito/mockito-all -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>${mockito.version}</version>
             <scope>test</scope>
         </dependency>
 
